--- a/assets/styles/homestyle.css
+++ b/assets/styles/homestyle.css
@@ -6,16 +6,6 @@ body {
     width: 100%;
 }
 
-.init-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    margin-top: 15px;
-    text-align: center;
-    color: #7800FF;
-}
-
 
 .init-texto{
     color: #ede2fa;
@@ -26,18 +16,26 @@ body {
 
 #frase1 {
     margin-bottom: 0px;
+    text-align: center;
 }
 
-#frase2 {
-    margin-top: 5px;
-    margin-bottom: 30px;
-}
+.init-forms{
 
+
+}
 .init-forms ul {
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     list-style: none;
     padding: 0; 
 }
 
+.init-forms ul li{
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
 .buttons input {
     width: 115px;
     height: 35px;
