--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -5,8 +5,14 @@ body {
     background-color: black;
 }
 
-
-
+#header-pag2{
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+}
+#header-pag2 img{
+    max-width: 100%;
+}
 #section-pag2 {
     text-align: center;
     display: flex;
@@ -19,6 +25,8 @@ body {
     color: white;
     font-size: 40px;
     margin: 2vh 5vw;
+    display: flex;
+    justify-content: center;
 }
 
 #content-pag2 p {
