--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,7 +11,7 @@ body {
     justify-content: center;
 }
 #header-pag2 img{
-    max-width: 100%;
+    max-width: 300px;
 }
 #section-pag2 {
     text-align: center;
