--- a/assets/styles/resultados.css
+++ b/assets/styles/resultados.css
@@ -43,11 +43,14 @@
    width: 100%;
    padding: 0 20px 20px 20px;
    display: flex;
-   justify-content: space-between;
-
+   justify-content: space-between;  
+   text-align: center;
 }
-.filtros button{
+.filtros a{
    width: 100px;
    height: 80px;
    border-radius: 50%;
+   background-color:rgba(255, 255, 255, .8);
+   padding-top: 30px;
+   text-decoration: none;
 }
