--- a/assets/styles/homestyle.css
+++ b/assets/styles/homestyle.css
@@ -6,7 +6,6 @@ body {
     width: 100%;
 }
 
-
 .init-texto{
     color: #ede2fa;
     width: 100%;
@@ -19,56 +18,24 @@ body {
     text-align: center;
 }
 
-.init-forms ul {
-    max-width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    list-style: none;
-    padding: 0; 
+.seach-group {
+    padding: 10px;
 }
 
-.init-forms ul li{
-    margin-right: 20px;
-    margin-bottom: 20px;
-}
-.buttons input {
-    width: 115px;
-    height: 35px;
-    padding: auto;
-    margin: auto;
-    outline-style: none;
-    background-color: rgba(131, 12, 160, 0.8);
+.btn-purple {
+    background-color: #830CA0;
     border-color: #830CA0;
-    color: white;
-    border-radius: 999px;
-    font-size: 15px;
-    font-weight: bold;
-    border: none;
-    text-align: center;
-    opacity: 0.6;
-    transition-duration: 0.4s;
+    color: #FFF;
 }
 
+.btn-purple:hover, .btn-purple:focus-within {
+    color: #FFF;
+    border-color: #804DA1;
+    border-top-color: #804DA1;
+    border-right-color: #804DA1;
+    border-bottom-color: #804DA1;
+    border-left-color: #804DA1;
+    box-shadow: none;
 
-.buttons form {
-    margin: auto;
-    padding: auto;
-    padding-left: 18px;
-    padding-right: 18px;
-    padding-top: 7px;
-    padding-bottom: 10px;
-}
-
-.buttons li {
-    display: inline-block;
-}
-
-.buttons input:hover {
-    cursor: pointer;
-    opacity: 1;
-    width: 140px;
-    height: 50px;
-    font-size: 19px;
 }
 
