--- a/assets/styles/homestyle.css
+++ b/assets/styles/homestyle.css
@@ -64,3 +64,31 @@ body {
         width: 100%;
     }
 }
+
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 10rem;
+    padding: .5rem 0;
+    margin: .125rem 0 0;
+    font-size: 1rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: .25rem;
+    overflow: auto;
+    max-height: 200px;
+}
+
+#genre-list {
+    padding-left: 8px;
+    cursor: pointer;
+    margin-bottom: 0px;
+}
