--- a/assets/styles/homestyle.css
+++ b/assets/styles/homestyle.css
@@ -107,6 +107,8 @@ body {
 
   .modal {
     background-image: url('../img/back.jpg');
+    width: 80% !important;
+    left: 10%;
   }
 
   .modal-content {
