--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,60 +1,61 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 body {
-    font-family: 'Bebas Neue', cursive;
-    background-color: black;
+  font-family: 'Bebas Neue', cursive;
+  background-color: black;
 }
 
-#header-pag2{
-    max-width: 100%;
-    display: flex;
-    justify-content: center;
+#header-pag2 {
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
-#header-pag2 img{
-    max-width: 300px;
+#header-pag2 img {
+  max-width: 300px;
 }
 #section-pag2 {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    flex-wrap: wrap;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 #content-pag2 {
-    color: white;
-    font-size: 40px;
-    margin: 2vh 5vw;
-    display: flex;
-    justify-content: center;
+  color: white;
+  font-size: 40px;
+  margin: 2vh 5vw;
+  display: flex;
+  justify-content: center;
 }
 
 #content-pag2 p {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .buttons-pag2 {
-    width: 241px;
-    height: 90px;
-    border-radius: 30px;
-    border-width: 1px;
-    border-style: solid;
-    outline-style: none;
-    margin: 2vh 5vw;
-    color: white;
-    background-color: rgba(131, 12, 160, 0.8);
-    border-color: #830CA0;
-    font-size: 30px;
+  width: 241px;
+  height: 90px;
+  border-radius: 30px;
+  border-width: 1px;
+  border-style: solid;
+  outline-style: none;
+  margin: 2vh 5vw;
+  color: white;
+  background-color: rgba(131, 12, 160, 0.8);
+  border-color: #830ca0;
+  font-size: 30px;
 }
 
-.buttons-pag2:focus, .buttons-pag2:hover {
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(131,12,160,1);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(131,12,160,1);
-    box-shadow: 0px 0px 10px 0px rgba(131,12,160,1);
-    background-color: rgba(131, 12, 160, 1);   
-    border-color: #830CA0;
-    font-weight: bold;
-    cursor: pointer;
+.buttons-pag2:focus,
+.buttons-pag2:hover {
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(131, 12, 160, 1);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(131, 12, 160, 1);
+  box-shadow: 0px 0px 10px 0px rgba(131, 12, 160, 1);
+  background-color: rgba(131, 12, 160, 1);
+  border-color: #830ca0;
+  font-weight: bold;
+  cursor: pointer;
 }
-
