--- a/assets/styles/homestyle.css
+++ b/assets/styles/homestyle.css
@@ -109,12 +109,6 @@ body {
   }
 }
 
-.modal {
-  background-image: url('../img/back.jpg');
-  width: 80% !important;
-  left: 10%;
-}
-
 .modal-content {
   display: flex;
   justify-content: center;
@@ -132,66 +126,81 @@ body {
   justify-content: center;
 }
 
-  #modal-header-m1 {
-      display: flex;
-      justify-content: center;
-      border: none;
-      padding: 40px 16px 16px 16px;
-  }
-
-  #button-close {
-      margin: 0 0;
-      padding: 0 0 0 32px;
-      color: white;
-      outline: none;
-  }
-
-  #modal-footer-m1 {
-      display: flex;
-      justify-content: center;
-      padding: 16px 16px 40px 16px;
-      border: none;
-  }
-
-  #modal-body-m1 {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    text-align: center;
-    border: none;
-    padding: 16px 0;
-  }
-
-  #modal-header-m2 {
-    display: flex;
-    justify-content: center;
-    border: none;
-    padding: 0px 16px 2px 16px;
+#modal-header-m1 {
+  display: flex;
+  justify-content: center;
+  border: none;
+  padding: 40px 16px 16px 16px;
 }
 
-#modal-footer-m2 {
-    display: flex;
-    justify-content: center;
-    padding: 2px 16px 0px 16px;
-    border: none;
+#button-close {
+  margin: 0 0;
+  padding: 0 0 0 32px;
+  color: white;
+  outline: none;
 }
 
-#modal-body-m2 {
+#modal-footer-m1 {
+  display: flex;
+  justify-content: center;
+  padding: 16px 16px 40px 16px;
+  border: none;
+}
+
+#modal-body-m1 {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   text-align: center;
   border: none;
-  padding: 0 0;
-  margin: 0 auto;
-  max-height: 250px;
-  color: black;
-  text-align: left;
+  padding: 16px 0;
+}
+
+#modal-header-m2 {
+  display: flex;
+  justify-content: center;
+  border: none;
+  padding: 0px 16px 2px 16px;
+}
+
+#modal-footer-m2 {
+  display: flex;
+  justify-content: center;
+  padding: 2px 16px 0px 16px;
+  border: none;
+}
+
+#modal-body-m2 {
+display: flex;
+justify-content: space-between;
+flex-direction: column;
+text-align: center;
+border: none;
+padding: 0 0;
+margin: 0 auto;
+max-height: 250px;
+color: black;
+text-align: left;
 }
 
 #modal-body-m2 .card {
-    margin: 0 0;
-  }
+  margin: 0 0;
+}
+
+.items-body-modal {
+    margin: 0 auto;
+    height: 38px;
+    width: 180px;
+    max-width: 180px;
+    max-height: 70px;
+    padding: 0;
+}
+
+.title-input {
+  display: flex;
+  justify-content: start;
+  align-items: flex-end;
+}
 
 @media (max-width: 350px) {
   .input-search {
@@ -200,15 +209,6 @@ body {
     justify-content: center;
   }
 }
-
-  .items-body-modal {
-      margin: 0 auto;
-      height: 38px;
-      width: 180px;
-      max-width: 180px;
-      max-height: 70px;
-      padding: 0;
-  }
 
 @media (max-width: 479px) {
   .input-search {
